--- a/css/order.css
+++ b/css/order.css
@@ -63,17 +63,17 @@ body {
 	font-weight: 400;
 	margin:  0;
 }
-.form-register .steps {
+.form-order .steps {
 	margin-bottom: 33px;
 }
-.form-register .steps ul {
+.form-order .steps ul {
     display: flex;
     display: -webkit-flex;
     list-style: none;
     padding-left: 108px;
 }
-.form-register .steps li,
-.form-register .steps li.current {
+.form-order .steps li,
+.form-order .steps li.current {
 	outline: none;
 	-o-outline: none;
     -ms-outline: none;
@@ -81,10 +81,10 @@ body {
     -webkit-outline: none;
     position: relative;
 }
-.form-register .steps li .current-info {
+.form-order .steps li .current-info {
 	display: none;
 }
-.form-register .steps li a {
+.form-order .steps li a {
 	text-decoration: none;
 	outline: none;
 	-o-outline: none;
@@ -92,10 +92,10 @@ body {
     -moz-outline: none;
     -webkit-outline: none;
 }
-.form-register .steps li a .title span {
+.form-order .steps li a .title span {
 	display: block;
 }
-.form-register .steps li a .title .step-icon { 
+.form-order .steps li a .title .step-icon { 
     width: 60px;
     height: 60px;
     border-radius: 50%;
@@ -115,7 +115,7 @@ body {
     font-size: 25.6px;
     margin-right: 108px;
 }
-.form-register .steps li a .step-icon i {
+.form-order .steps li a .step-icon i {
 	position: absolute;
 	top: 50%;
 	left: 50%;
@@ -125,8 +125,8 @@ body {
     -moz-transform: translate(-50%, -50%);
     -webkit-transform: translate(-50%, -50%);
 }
-.form-register .steps li .step-icon::before,
-.form-register .steps li:last-child .step-icon::after {
+.form-order .steps li .step-icon::before,
+.form-order .steps li:last-child .step-icon::after {
 	position: absolute;
 	content: "";
 	background: #e5e5e5;
@@ -139,35 +139,35 @@ body {
     -moz-transform: translateY(-50%);
     -webkit-transform: translateY(-50%);
 }
-.form-register .steps li .step-icon::before {
+.form-order .steps li .step-icon::before {
 	right: 100%;
 }
-.form-register .steps li:last-child .step-icon::after {
+.form-order .steps li:last-child .step-icon::after {
     left: 100%;
 }
 
-.form-register .steps li.current a .step-icon,
-.form-register .steps li.current a:active .step-icon,
-.form-register .steps li.done a .step-icon,
-.form-register .steps li.done a:active .step-icon {
+.form-order .steps li.current a .step-icon,
+.form-order .steps li.current a:active .step-icon,
+.form-order .steps li.done a .step-icon,
+.form-order .steps li.done a:active .step-icon {
     background: #24c1e8;
 }
-.form-register .steps .current .step-icon::before,
-.form-register .steps .current:last-child .step-icon::after,
-.form-register .steps .done .step-icon::before {
+.form-order .steps .current .step-icon::before,
+.form-order .steps .current:last-child .step-icon::after,
+.form-order .steps .done .step-icon::before {
 	background: #24c1e8;
 }
-.form-register .steps li a .step-text {
+.form-order .steps li a .step-text {
 	color: #999;
 	font-weight: 400;
 	font-size: 18px;
 	padding:  14px 0 8px;
 }
-.form-register .steps .current .step-text,
-.form-register .steps .done .step-text {
+.form-order .steps .current .step-text,
+.form-order .steps .done .step-text {
 	color: #333;
 }
-.form-register .content {
+.form-order .content {
     margin: 0 20px 0 20px;
     box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.15);
     -o-box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.15);
@@ -181,10 +181,10 @@ body {
     -webkit-border-radius: 5px;
     padding: 35px 55px 55px;
 }
-.form-register .content h2 {
+.form-order .content h2 {
 	display: none;
 }
-.form-register .content .inner h3 {
+.form-order .content .inner h3 {
 	font-size: 22px;
     color: #333;
     font-weight: 700;
@@ -192,14 +192,14 @@ body {
     padding-bottom: 18px;
     padding-top: 5px;
 }	
-.form-register .content .form-total-p-1 .inner h3 {
+.form-order .content .form-total-p-1 .inner h3 {
 	padding-bottom: 13px;
 	padding-top: 0;
 }
-.form-register .content #form-total-p-3 .inner h3 {
+.form-order .content #form-total-p-3 .inner h3 {
 	padding-bottom: 5px;
 }
-.form-register .content .inner h4 {
+.form-order .content .inner h4 {
 	font-size: 18px;
 	font-weight: 700;
 	color: #333;
@@ -490,7 +490,7 @@ body {
 	}
 }
 @media screen and (max-width: 991px) {
-	.form-register .steps ul {
+	.form-order .steps ul {
 	    padding-left: 0;
 	    justify-content: space-around;
 	    -o-justify-content: space-around;
@@ -498,15 +498,15 @@ body {
 		-moz-justify-content: space-around;
 		-webkit-justify-content: space-around;
 	}
-	.form-register .steps li a .title {
+	.form-order .steps li a .title {
 		text-align: center;
 	}
-	.form-register .steps li a .title .step-icon,
-	.form-register .steps li a .title .step-icon {
+	.form-order .steps li a .title .step-icon,
+	.form-order .steps li a .title .step-icon {
 		margin: 0 auto;
 	}
-	.form-register .steps li a .title .step-icon::before,
-	.form-register .steps li:last-child a .title .step-icon::after {
+	.form-order .steps li a .title .step-icon::before,
+	.form-order .steps li:last-child a .title .step-icon::after {
 		content: none;
 	}
 	.actions ul li:first-child {
@@ -557,15 +557,15 @@ body {
 	    margin-right: 0;
 	    display: block;
 	}
-	.form-register .steps li a .title .step-icon {
+	.form-order .steps li a .title .step-icon {
 		width: 40px;
 		height: 40px;
 		font-size: 20px;
 	}
-	.form-register .steps li a .step-text {
+	.form-order .steps li a .step-text {
 		font-size: 12px;
 	}
-	.form-register .content {
+	.form-order .content {
 		padding: 35px 30px 60px;
 	}
 	.inner .form-row #radio {
