Fix form method post issue

--- a/css/order.css
+++ b/css/order.css
@@ -192,11 +192,11 @@ body {
     padding-bottom: 18px;
     padding-top: 5px;
 }	
-.form-order .content .form-total-p-1 .inner h3 {
+.form-order .content .form-order-p-1 .inner h3 {
 	padding-bottom: 13px;
 	padding-top: 0;
 }
-.form-order .content #form-total-p-3 .inner h3 {
+.form-order .content #form-order-p-3 .inner h3 {
 	padding-bottom: 5px;
 }
 .form-order .content .inner h4 {
