Update background-image on login and signup

--- a/css/login.css
+++ b/css/login.css
@@ -106,7 +106,7 @@
 }
 
 body {
-    background-image: url("/pictures/login2.jpg");
+    background-image: url("/images/login2.jpg");
     background-size: 1700px;
     background-attachment: fixed;
     font-family: "Roboto", sans-serif;
