--- a/css/signup.css
+++ b/css/signup.css
@@ -106,7 +106,7 @@
 }
 
 body {
-    background-image: url("/pictures/login.jpg");
+    background-image: url("/images/login.jpg");
     background-size: 1700px;
     background-attachment: fixed;
     font-family: "Roboto", sans-serif;
