--- a/css/index.css
+++ b/css/index.css
@@ -11,7 +11,11 @@ img {
     height: 10m;
     text-align: left;
 }
-
+p {
+    font-size: smaller;
+    
+    font-family: Myfont, sans-serif !important;
+}
 li {
     float: right;
 }
@@ -56,4 +60,5 @@ h1 {
 
 h6 {
     text-align: left;
+    
 }
